--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="#projects-homepage" class="down-icon"><i class="fa-solid fa-angles-down"></i></a>
   </div>
   <div id="projects-homepage">
-    <h3 class="featured text-center mt-5">
+    <h3 class="featured text-center mt-5 mb-3">
       Featured Projects
     </h3>
     <div class="container-fluid">
@@ -42,55 +42,57 @@
         </div>
         <div class="col p-5">
           <div class="project-text">
-            <h4 class="text-center mt-2">
-              Weather App 
+            <h4 class="text-center mt-3">
+              Weather App
             </h4>
-            <p class="mt-3 project-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut mauris
-              non magna
-              tempor luctus vitae a metus. Donec
-              sit amet mollis erat. Duis tristique, dui quis finibus accumsan, mauris velit maximus neque, ut blandit
-              felis ligula vel
-              purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
-            <div class="project-links mt-4">
-              <div class="row">
-                <div class="col">
-                  <a href="https://lucky-torte-cf570f.netlify.app"
-                    target="blank" class="btn-branding text-center mt-3">
-                    Visit Site
-                  </a>
-                </div>
-                <div class="col">
-                  <a href="https://github.com/kendracodesio/weather-app" target="blank" class="btn-branding text center mt-3">
-                    View Source
-                  </a>
+              <p class="mt-3 project-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut
+                mauris
+                non magna
+                tempor luctus vitae a metus. Donec
+                sit amet mollis erat. Duis tristique, dui quis finibus accumsan, mauris velit maximus neque, ut blandit
+                felis ligula vel
+                purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
+              <div class="project-links mt-5">
+                <div class="row">
+                  <div class="col">
+                    <a href="https://lucky-torte-cf570f.netlify.app" target="blank"
+                      class="btn-branding text-center mt-3">
+                      Visit Site
+                    </a>
+                  </div>
+                  <div class="col">
+                    <a href="https://github.com/kendracodesio/weather-app" target="blank"
+                      class="btn-branding text center mt-3">
+                      View Source
+                    </a>
+                  </div>
                 </div>
               </div>
-            </div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col p-5">
           <div class="project-text">
-            <h4 class="text-center mt-2">
+            <h4 class="text-center mt-3">
               Typing Test App
             </h4>
-            <p class="mt-3 project-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut mauris
+            <p class="mt-3 project-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut
+              mauris
               non magna
               tempor luctus vitae a metus. Donec
               sit amet mollis erat. Duis tristique, dui quis finibus accumsan, mauris velit maximus neque, ut blandit
               felis ligula vel
               purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
-            <div class="project-links mt-4">
+            <div class="project-links mt-5">
               <div class="row">
                 <div class="col">
-                  <a href="#"
-                    target="blank" class="btn-branding text-center mt-3">
-                    Visit Site
+                  <a href="#" target="blank" class="btn-branding text-center mt-3">
+                    visit site
                   </a>
                 </div>
                 <div class="col">
-                  <a href="#" class="btn-branding text center mt-3">View Source</a>
+                  <a href="#" class="btn-branding text-center mt-3">see the code</a>
                 </div>
               </div>
             </div>
@@ -108,8 +110,8 @@
         </div>
         <div class="col p-5">
           <div class="project-text">
-            <h4 class="text-center mt-2">
-              Coffeelicious Landing Page
+            <h4 class="text-center mt-3">
+              Landing Page
             </h4>
             <p class="mt-3 project-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut mauris
               non magna
@@ -117,7 +119,7 @@
               sit amet mollis erat. Duis tristique, dui quis finibus accumsan, mauris velit maximus neque, ut blandit
               felis ligula vel
               purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
-            <div class="project-links mt-4">
+            <div class="project-links mt-5">
               <div class="row">
                 <div class="col">
                   <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/979/900/original/coffeelicious.html?1656976602"
