updated link text

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                   <div class="col">
                     <a href="https://github.com/kendracodesio/weather-app" target="blank"
                       class="btn-branding text center mt-3">
-                      View Source
+                      View Code
                     </a>
                   </div>
                 </div>
@@ -88,11 +88,11 @@
               <div class="row">
                 <div class="col">
                   <a href="#" target="blank" class="btn-branding text-center mt-3">
-                    visit site
+                    Visit Site
                   </a>
                 </div>
                 <div class="col">
-                  <a href="#" class="btn-branding text-center mt-3">see the code</a>
+                  <a href="#" class="btn-branding text-center mt-3">View Code</a>
                 </div>
               </div>
             </div>
@@ -128,7 +128,7 @@
                   </a>
                 </div>
                 <div class="col">
-                  <a href="#" class="btn-branding text center mt-3">View Source</a>
+                  <a href="#" class="btn-branding text center mt-3">View Code</a>
                 </div>
               </div>
             </div>
