made homepage responsive

--- a/index.html
+++ b/index.html
@@ -34,109 +34,84 @@
     <h3 class="featured text-center mt-5 mb-3">
       Featured Projects
     </h3>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col image-block p-2 mt-5 shadow-sm">
-          <img class="project-image rounded p-1 mt-4 img-fluid d-flex" src="/images/vanilla-js-weather-app.png"
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-lg-4 text-center">
+          <h4 class="mt-2 project-heading">
+            Weather App
+          </h4>
+          <img class="project-image d-flex rounded" src="/images/vanilla-js-weather-app.png"
             alt="weather app vanilla js">
-        </div>
-        <div class="col p-5">
-          <div class="project-text">
-            <h4 class="text-center mt-3">
-              Weather App
-            </h4>
-              <p class="mt-3 project-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut
-                mauris
-                non magna
-                tempor luctus vitae a metus. Donec
-                sit amet mollis erat. Duis tristique, dui quis finibus accumsan, mauris velit maximus neque, ut blandit
-                felis ligula vel
-                purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
-              <div class="project-links mt-5">
-                <div class="row">
-                  <div class="col">
-                    <a href="https://lucky-torte-cf570f.netlify.app" target="blank"
-                      class="btn-branding text-center mt-3">
-                      Visit Site
-                    </a>
-                  </div>
-                  <div class="col">
-                    <a href="https://github.com/kendracodesio/weather-app" target="blank"
-                      class="btn-branding text center mt-3">
-                      View Code
-                    </a>
-                  </div>
-                </div>
-              </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col p-5">
-          <div class="project-text">
-            <h4 class="text-center mt-3">
-              Typing Test App
-            </h4>
-            <p class="mt-3 project-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut
-              mauris
-              non magna
-              tempor luctus vitae a metus. Donec
-              sit amet mollis erat. Duis tristique, dui quis finibus accumsan, mauris velit maximus neque, ut blandit
-              felis ligula vel
-              purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
-            <div class="project-links mt-5">
-              <div class="row">
-                <div class="col">
-                  <a href="#" target="blank" class="btn-branding text-center mt-3">
-                    Visit Site
-                  </a>
-                </div>
-                <div class="col">
-                  <a href="#" class="btn-branding text-center mt-3">View Code</a>
-                </div>
-              </div>
+          <p class="mt-2 project-paragraph p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Vivamus ut mauris non magna tempor luctus vitae a metus. Donecsit amet mollis erat. Duis tristique, dui quis
+            finibus accumsan, mauris velit maximus neque, ut blandit felis ligula vel
+            purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
+          <div class="project-links mt-3">
+            <div class="site-link">
+              <a href="https://lucky-torte-cf570f.netlify.app" target="blank" class="btn-branding mt-3">
+                Visit Site
+              </a>
+            </div>
+            <div class="git-link">
+              <a href="https://github.com/kendracodesio/weather-app" target="blank" class="btn-branding mt-3">
+                View Code
+              </a>
             </div>
           </div>
         </div>
-        <div class="col image-block p-2 mt-5 shadow-sm">
-          <img class="project-image rounded p-1 mt-4 img-fluid d-flex" src="/images/Typing-Speed-Test.png"
-            alt="typing speed accuracy test app">
+        <div class="col-lg-4 text-center">
+
+          <h4 class="mt-2 project-heading">
+            Typing Test App
+          </h4>
+
+          <img class="project-image d-flex rounded" src="/images/Typing-Speed-Test.png" alt="weather app vanilla js">
+          <p class="mt-2 project-paragraph p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Vivamus ut mauris non magna tempor luctus vitae a metus. Donecsit amet mollis erat. Duis tristique, dui quis
+            finibus accumsan, mauris velit maximus neque, ut blandit felis ligula vel
+            purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
+          <div class="project-links mt-3">
+            <div class="site-link">
+              <a href="https://lucky-torte-cf570f.netlify.app" target="blank" class="btn-branding mt-3">
+                Visit Site
+              </a>
+            </div>
+            <div class="git-link">
+              <a href="https://github.com/kendracodesio/weather-app" target="blank" class="btn-branding mt-3">
+                View Code
+              </a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col image-block p-2 mt-5 shadow-sm">
-          <img class="project-image rounded p-1 mt-4 img-fluid d-flex" src="/images/coffeelicious-landing-page.png"
-            alt="coffee landing page">
-        </div>
-        <div class="col p-5">
-          <div class="project-text">
-            <h4 class="text-center mt-3">
-              Landing Page
-            </h4>
-            <p class="mt-3 project-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut mauris
-              non magna
-              tempor luctus vitae a metus. Donec
-              sit amet mollis erat. Duis tristique, dui quis finibus accumsan, mauris velit maximus neque, ut blandit
-              felis ligula vel
+        <div class="col-lg-4 text-center project-col">
+          <h4 class="mt-2 project-heading">
+            Landing Page
+          </h4>
+          <img class="project-image d-flex rounded" src="/images/coffeelicious-landing-page.png"
+            alt="landing page for coffelicious recipe ebook">
+            <p class="mt-2 project-paragraph p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Vivamus ut mauris non magna tempor luctus vitae a metus. Donecsit amet mollis erat. Duis tristique, dui quis
+              finibus accumsan, mauris velit maximus neque, ut blandit felis ligula vel
               purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
-            <div class="project-links mt-5">
-              <div class="row">
-                <div class="col">
-                  <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/979/900/original/coffeelicious.html?1656976602"
-                    target="blank" class="btn-branding text-center mt-3">
-                    Visit Site
-                  </a>
-                </div>
-                <div class="col">
-                  <a href="#" class="btn-branding text center mt-3">View Code</a>
-                </div>
-              </div>
+          <div class="project-links mt-3">
+            <div class="site-link">
+              <a href="https://lucky-torte-cf570f.netlify.app" target="blank" class="btn-branding mt-3">
+                Visit Site
+              </a>
+            </div>
+            <div class="git-link">
+              <a href="https://github.com/kendracodesio/weather-app" target="blank" class="btn-branding mt-3">
+                View Code
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  </div>
+
+
 </body>
 
 </html>
