updated link addresses

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
           <div class="project-links mt-3">
             <div class="site-link">
-              <a href="https://lucky-torte-cf570f.netlify.app" target="blank" class="btn-branding mt-3">
+              <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="blank" class="btn-branding mt-3">
                 Visit Site
               </a>
             </div>
             <div class="git-link">
-              <a href="https://github.com/kendracodesio/weather-app" target="blank" class="btn-branding mt-3">
+              <a href="https://github.com/kendracodesio/typing-test-app" target="blank" class="btn-branding mt-3">
                 View Code
               </a>
             </div>
@@ -95,12 +95,12 @@
               purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
           <div class="project-links mt-3">
             <div class="site-link">
-              <a href="https://lucky-torte-cf570f.netlify.app" target="blank" class="btn-branding mt-3">
+              <a href="https://remarkable-marigold-83198c.netlify.app/" target="blank" class="btn-branding mt-3">
                 Visit Site
               </a>
             </div>
             <div class="git-link">
-              <a href="https://github.com/kendracodesio/weather-app" target="blank" class="btn-branding mt-3">
+              <a href="https://github.com/kendracodesio/coffeelicious-landing-page" target="blank" class="btn-branding mt-3">
                 View Code
               </a>
             </div>
