updated project text with real information

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
           </h4>
           <img class="project-image d-flex rounded" src="/images/vanilla-js-weather-app.png"
             alt="weather app vanilla js">
-          <p class="mt-2 project-paragraph p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Vivamus ut mauris non magna tempor luctus vitae a metus. Donecsit amet mollis erat. Duis tristique, dui quis
-            finibus accumsan, mauris velit maximus neque, ut blandit felis ligula vel
-            purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
+            <h5 class="dark-text mt-4">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, Axios, Bootstrap, API, GitHub</h5>
+          <p class="mt-2 project-paragraph p-2">One of my favorite projects I've worked on to date was this weather web application that uses the Open Weather API.
+          Using JavaScript with Axios, whenever the user enters a city name and clicks search, a request is made to the API
+          server. If the city name is found, the weather data is retrieved from the third-party server and injected into the site.
+          Additionally, the web app uses the Geolocation API to get the user's current position. Note: This is a optional feature
+          that occurs only when location icon is clicked and user grants permission.</p>
           <div class="project-links mt-3">
             <div class="site-link">
               <a href="https://lucky-torte-cf570f.netlify.app" target="blank" class="btn-branding mt-3">
@@ -66,10 +68,12 @@
           </h4>
 
           <img class="project-image d-flex rounded" src="/images/Typing-Speed-Test.png" alt="weather app vanilla js">
-          <p class="mt-2 project-paragraph p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Vivamus ut mauris non magna tempor luctus vitae a metus. Donecsit amet mollis erat. Duis tristique, dui quis
-            finibus accumsan, mauris velit maximus neque, ut blandit felis ligula vel
-            purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
+          <h5 class="dark-text mt-4">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, GitHub</h5>
+          <p class="mt-2 project-paragraph p-2">This typing speed and accuracy test web application uses vanilla JavaScript to interact with the user. The test allows
+          for three different options with a countdown timer that begins after the user clicks start. The app keeps track of the
+          user's keystrokes using an event handler, allowing the user to see when they make a typing mistake in real time.
+          Incorrect keystrokes are denoted in yellow and are underlined. Once the timer hits zero, the results screen is displayed
+          showing the calculated words per minute and accuracy. </p>
           <div class="project-links mt-3">
             <div class="site-link">
               <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="blank" class="btn-branding mt-3">
@@ -89,10 +93,14 @@
           </h4>
           <img class="project-image d-flex rounded" src="/images/coffeelicious-landing-page.png"
             alt="landing page for coffelicious recipe ebook">
-            <p class="mt-2 project-paragraph p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-              Vivamus ut mauris non magna tempor luctus vitae a metus. Donecsit amet mollis erat. Duis tristique, dui quis
-              finibus accumsan, mauris velit maximus neque, ut blandit felis ligula vel
-              purus. Sed ipsum libero, faucibus ut erat in, porttitor porta quam. </p>
+            <h5 class="dark-text mt-4">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, GitHub</h5>
+            <p class="mt-2 project-paragraph p-2">One of the first projects I created was this simple landing page for a coffee 
+              recipe e-book. I implemented an 'order now' button that utilizes JavaScript prompting the user for their name and 
+              email address. If the name is left blank or the email format is incorrect, the user is alerted of these errors, 
+              otherwise a message is displayed confirming receipt of the order. 
+              Note: This is a fictitious product and was created for demonstration purposes only. Feel free to test it out using fake
+              or incomplete information!
+</p>
           <div class="project-links mt-3">
             <div class="site-link">
               <a href="https://remarkable-marigold-83198c.netlify.app/" target="blank" class="btn-branding mt-3">
