--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="/style/portfolio.css" type="text/css">
+ 
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
@@ -20,6 +20,7 @@
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/1179b3bac5.js" crossorigin="anonymous"></script>
 
+  <link rel="stylesheet" href="/style/portfolio.css" type="text/css">
 </head>
 
 <body>
@@ -43,7 +44,7 @@
           <img class="project-image d-flex rounded" src="/images/vanilla-js-weather-app.png"
             alt="weather app vanilla js">
             <h5 class="dark-text mt-4">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, Axios, Bootstrap, API, GitHub</h5>
-          <p class="mt-2 project-paragraph p-2">One of my favorite projects I've worked on to date was this weather web application that uses the Open Weather API.
+          <p class="m-2  project-paragraph p-2">One of my favorite projects I've worked on to date was this weather web application that uses the Open Weather API.
           Using JavaScript with Axios, whenever the user enters a city name and clicks search, a request is made to the API
           server. If the city name is found, the weather data is retrieved from the third-party server and injected into the site.
           Additionally, the web app uses the Geolocation API to get the user's current position. Note: This is a optional feature
