--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h3 class="featured text-center mt-5 mb-3">
       Featured Projects
     </h3>
-    <div class="container">
+    <div class="container-fluid p-3">
       <div class="row mb-5">
         <div class="col-lg-4 text-center">
           <h4 class="mt-2 project-heading">
