added nav bar to all pages

--- a/index.html
+++ b/index.html
@@ -24,6 +24,31 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg fixed-top ">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">KENDRA REYNOLDS</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/work.html">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="intro">
     <h1 class="text-center">Hello, I'm Kendra</h1>
     <h2 class="text-center mt-3">
@@ -44,7 +69,7 @@
           <img class="project-image d-flex rounded" src="/images/vanilla-js-weather-app.png"
             alt="weather app vanilla js">
               <div class="button-wrapper p-3">
-                <a href="#" target="blank" class="btn-branding">
+                <a href="/work.html#weather-app" target="blank" class="btn-branding">
                   Learn More
                 </a>
               </div>
@@ -55,7 +80,7 @@
           </h4>
           <img class="project-image d-flex rounded" src="/images/Typing-Speed-Test.png" alt="weather app vanilla js">
       <div class="button-wrapper p-3">
-        <a href="#" target="blank" class="btn-branding">
+        <a href="work.html#type-test-app" target="blank" class="btn-branding">
           Learn More
         </a>
       </div>
@@ -68,7 +93,7 @@
             alt="landing page for coffelicious recipe ebook">
 
     <div class="button-wrapper p-3">
-      <a href="#" target="blank" class="btn-branding">
+      <a href="work.html#landing-page" target="blank" class="btn-branding">
         Learn More 
       </a>
     </div>
