--- a/work.html
+++ b/work.html
@@ -24,7 +24,32 @@
  
 </head>
 
-<body>
+<body class="body-pages">
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/index.html">KENDRA REYNOLDS</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="/work.html">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   <div class="sup-heading">
     <h1 class="h1-supplement-page text-center">
       Check Out My Work...
@@ -32,7 +57,7 @@
   </div>
   <div class="container">
     <div class="project-container">
-      <div class="row text-center project-row">
+      <div class="row text-center project-row" id="weather-app">
         <h4 class="mt-3 project-heading">
           Weather App
         </h4>
@@ -69,7 +94,7 @@
       </div>
     </div>
     <div class="project-container">
-      <div class="row text-center project-row">
+      <div class="row text-center project-row" id="type-test-app">
         <h4 class="mt-2 project-heading">
           Typing Test App
         </h4>
@@ -103,7 +128,7 @@
       </div>
     </div>
     <div class="project-container">
-      <div class="row text-center project-row">
+      <div class="row text-center project-row" id="landing-page">
         <h4 class="mt-2 project-heading">
           Landing Page
         </h4>
