--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,32 @@
   <link rel="stylesheet" href="/style/portfolio.css" type="text/css">
 </head>
 
-<body>
+<body class="body-pages">
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/index.html">KENDRA REYNOLDS</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/work.html">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <div class="sup-heading text-center mb-5">
     <h1 class="h1-supplement-page d-inline">
       Let's Get In Touch </h1><span class="h1-supplement-page"><i class="fa-regular fa-paper-plane"></i></span>
