--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
   </nav>
   <div class="sup-heading text-center mb-5">
     <h1 class="h1-supplement-page d-inline">
-      Let's Get In Touch </h1><span class="h1-supplement-page"><i class="fa-regular fa-paper-plane"></i></span>
+      Get In Touch </h1><span class="h1-supplement-page"><i class="fa-regular fa-paper-plane"></i></span>
   </div>
   <h3 class="text-center">Email</h3>
   <p class="text-center mb-5">
