--- a/work.html
+++ b/work.html
@@ -21,154 +21,124 @@
   <script src="https://kit.fontawesome.com/1179b3bac5.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="/style/portfolio.css" type="text/css">
- 
+
 </head>
+<body>
 
-<body class="body-pages">
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">KENDRA REYNOLDS</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/work.html">Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  <div class="sup-heading">
-    <h1 class="h1-supplement-page text-center">
-      Check Out My Work...
-    </h1>
+<nav class="navbar navbar-expand-lg fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/index.html">KENDRA REYNOLDS</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/work.html">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
   </div>
-  <div class="container">
-    <div class="project-container">
-      <div class="row text-center project-row" id="weather-app">
-        <h4 class="mt-3 project-heading">
-          Weather App
-        </h4>
-        <img class="project-image-work d-block rounded img-fluid" src="/images/vanilla-js-weather-app.png"
-          alt="weather app vanilla js">
-        <h5 class="dark-text mt-4">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, Axios, Bootstrap, API,
-          GitHub</h5>
-        <div class="project-paragraph-container">
-          <p class="m-2  project-paragraph p-2">One of my favorite projects I've worked on to date was this weather web
-            application that uses the Open Weather API.
-            Using JavaScript with Axios, whenever the user enters a city name and clicks search, a request is made to
-            the
-            API
-            server. If the city name is found, the weather data is retrieved from the third-party server and injected
-            into
-            the site.
-            Additionally, the web app uses the Geolocation API to get the user's current position. Note: This is a
-            optional
-            feature
-            that occurs only when location icon is clicked and user grants permission.</p>
-        </div>
-        <div class="project-links mt-3 mb-5">
-          <div class="site-link">
-            <a href="https://lucky-torte-cf570f.netlify.app" target="blank" class="btn-branding mt-3">
-              Visit Site
-            </a>
-          </div>
-          <div class="git-link">
-            <a href="https://github.com/kendracodesio/weather-app" target="blank" class="btn-branding mt-3">
-              View Code
-            </a>
-          </div>
-        </div>
-      </div>
+</nav>
+<div id="weather-app"></div>
+<h1 class="h1-supplement-page text-center sup-heading mt-5 mb-5">What I've Done</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6">
+      <img class="project-image-work img-fluid" src="/images/vanilla-js-weather-app.png" alt="weather-app">
     </div>
-    <div class="project-container">
-      <div class="row text-center project-row" id="type-test-app">
-        <h4 class="mt-2 project-heading">
-          Typing Test App
-        </h4>
-        <img class="project-image-work d-block rounded img-fluid" src="/images/Typing-Speed-Test.png"
-          alt="weather app vanilla js">
-        <h5 class="dark-text mt-4">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, GitHub</h5>
-        <div class="project-paragraph-container p-2 ">
-          <p class="mt-2 project-paragraph p-2">This typing speed and accuracy test web application uses vanilla
-            JavaScript to interact with the user. The test allows for three different options with a countdown timer
-            that begins after the user clicks start. The app keeps track
-            of the
-            user's keystrokes using an event handler, allowing the user to see when they make a typing mistake in real
-            time.
-            Incorrect keystrokes are denoted in yellow and are underlined. Once the timer hits zero, the results screen
-            is
-            displayed
-            showing the calculated words per minute and accuracy. </p>
+    <div class="col-lg-6">
+      <h2 class="work-project-headings text-center">Weather App</h2>
+      <h5 class="colored-text text-center mt-3">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, Axios,
+        Bootstrap, API,
+        GitHub</h5>
+      <p class="m-2  project-paragraph p-2">One of my favorite projects I've worked on to date was this weather
+        web app that uses the Open Weather API.
+        Using JavaScript with Axios, whenever a city search is made, a request is made to
+        the API server. If a match is found, the weather data is retrieved from the third-party server and injected
+        into the site.</p>
+      <div class="project-links mt-3 mb-5">
+        <div class="site-link">
+          <a href="https://lucky-torte-cf570f.netlify.app" target="blank" class="btn-branding mt-3">
+            Visit Site
+          </a>
         </div>
-        <div class="project-links mt-3 mb-5">
-          <div class="site-link">
-            <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="blank" class="btn-branding mt-3">
-              Visit Site
-            </a>
-          </div>
-          <div class="git-link">
-            <a href="https://github.com/kendracodesio/typing-test-app" target="blank" class="btn-branding mt-3">
-              View Code
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="project-container">
-      <div class="row text-center project-row" id="landing-page">
-        <h4 class="mt-2 project-heading">
-          Landing Page
-        </h4>
-        <img class="project-image-work d-block rounded img-fluid" src="/images/coffeelicious-landing-page.png"
-          alt="landing page for coffelicious recipe ebook">
-        <h5 class="dark-text mt-4">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, GitHub</h5>
-        <div class="project-paragraph-container p-2">
-          <p class="mt-2 project-paragraph p-2">One of the first projects I created was this simple landing page for a
-            coffee
-            recipe e-book. I implemented an 'order now' button that utilizes JavaScript prompting the user for their
-            name
-            and
-            email address. If the name is left blank or the email format is incorrect, the user is alerted of these
-            errors,
-            otherwise a message is displayed confirming receipt of the order.
-            Note: This is a fictitious product and was created for demonstration purposes only. Feel free to test it out
-            using fake
-            or incomplete information!
-          </p>
-        </div>
-        <div class="project-links mt-3 mb-5">
-          <div class="site-link">
-            <a href="https://remarkable-marigold-83198c.netlify.app/" target="blank" class="btn-branding mt-3">
-              Visit Site
-            </a>
-          </div>
-          <div class="git-link">
-            <a href="https://github.com/kendracodesio/coffeelicious-landing-page" target="blank"
-              class="btn-branding mt-3">
-              View Code
-            </a>
-          </div>
+        <div class="git-link">
+          <a href="https://github.com/kendracodesio/weather-app" target="blank" class="btn-branding mt-3">
+            View Code
+          </a>
+          <div id="type-test-app"></div>
         </div>
       </div>
     </div>
   </div>
-
-
-
-
+  <div class="row mt-5">
+    <div class="col-lg-6">
+      <img class="project-image-work img-fluid" src="/images/Typing-Speed-Test.png" alt="typing test app">
+    </div>
+    <div class="col-lg-6">
+      <h2 class="work-project-headings text-center">Typing Test App</h2>
+      <h5 class="colored-text text-center mt-3">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, Github
+      </h5>
+      <p class="m-2  project-paragraph p-2"> This typing speed and accuracy test web application uses vanilla
+        JavaScript to interact with the user. The test allows for three different options with a countdown timer
+        that begins after the user clicks start. The app keeps track
+        of the
+        user's keystrokes using an event handler, allowing the user to see when they make a typing mistake in real
+        time.</p>
+      <div class="project-links mt-3 mb-5">
+        <div class="site-link">
+          <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="blank" class="btn-branding mt-3">
+            Visit Site
+          </a>
+        </div>
+        <div class="git-link">
+          <a href="https://github.com/kendracodesio/typing-test-app" target="blank" class="btn-branding mt-3">
+            View Code
+          </a>
+            <div id="landing-page"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row mt-5">
+    <div class="col-lg-6">
+      <img class="project-image-work img-fluid" src="/images/coffeelicious-landing-page.png" alt="coffee-landing-page">
+    </div>
+    <div class="col-lg-6">
+      <h2 class="work-project-headings text-center">Landing Page</h2>
+      <h5 class="colored-text text-center mt-3">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, Github
+      </h5>
+      <p class="m-2  project-paragraph p-2"> One of the first projects I created was this simple landing page for a
+        fictitious coffee recipe e-book. I implemented an 'order now' button that utilizes JavaScript prompting the user
+        for their
+        name and email address and ensures they are valid.</p>
+      <div class="project-links mt-3 mb-5">
+        <div class="site-link">
+          <a href="https://remarkable-marigold-83198c.netlify.app/" target="blank" class="btn-branding mt-3">
+            Visit Site
+          </a>
+        </div>
+        <div class="git-link">
+          <a href="https://github.com/kendracodesio/coffeelicious-landing-page" target="blank"
+            class="btn-branding mt-3">
+            View Code
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
