added footer to all pages

--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,10 @@
     </div>
   </nav>
   <div class="sup-heading text-center mb-5">
-    <h1 class="h1-supplement-page d-inline">
-      Get In Touch </h1><span class="h1-supplement-page"><i class="fa-regular fa-paper-plane"></i></span>
+<i class="fa-regular fa-paper-plane h1-supplement-page mb-2"></i>
+    <h1 class="h1-supplement-page">
+      Get In Touch</h1>
+         
   </div>
   <h3 class="text-center">Email</h3>
   <p class="text-center mb-5">
@@ -61,11 +63,40 @@
   <p class="text-center mb-5">
     <a href="https://twitter.com/kendracodesio" class="links-in-paragraph contact-link" target="_blank">@kendracodesio</a>
   </p>
-  <h3 class="text-center">Instagram</h3>
-  <p class="text-center">
+  <h3 class="text-center ">Instagram</h3>
+  <p class="text-center page-bottom">
     <a href="http://instagram.com/kendrreyy" class="links-in-paragraph contact-link" target="_blank">@kendrreyy</a>
   </p>
-
+<footer>
+  <div class=" text-center">
+    <ul class="social-links">
+      <div>
+        <li>
+          <a href="www.linkedin.com/in/kendrarreynolds"><i class="fa-brands fa-linkedin"></i></a>
+        </li>
+      </div>
+      <div>
+        <li>
+          <a href="https://twitter.com/kendracodesio"><i class="fa-brands fa-twitter"></i></a>
+        </li>
+      </div>
+      <div>
+        <li>
+          <a href="http://instagram.com/kendrreyy"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+      </div>
+      <div>
+        <li>
+          <a href="https://github.com/kendracodesio"><i class="fa-brands fa-github"></i></a>
+        </li>
+      </div>
+    </ul>
+  </div>
+  <p class="text-center">
+    <i class="fa fa-copyright"></i>
+    Kendra Reynolds 2022
+  </p>
+</footer>
 
 
 
