--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <img class="project-image d-flex rounded" src="/images/coffeelicious-landing-page.png"
             alt="landing page for coffelicious recipe ebook">
 
-          <div class="button-wrapper p-3">
+          <div class="button-wrapper p-3 mb-5">
             <a href="work.html#landing-page" target="blank" class="btn-branding">
               Learn More
             </a>
@@ -101,7 +101,37 @@
       </div>
     </div>
 
-
+    <footer>
+      <div class=" text-center">
+        <ul class="social-links">
+          <div>
+            <li>
+              <a href="www.linkedin.com/in/kendrarreynolds"><i class="fa-brands fa-linkedin"></i></a>
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="https://twitter.com/kendracodesio"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="http://instagram.com/kendrreyy"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+          </div>
+          <div>
+            <li>
+              <a href="https://github.com/kendracodesio"><i class="fa-brands fa-github"></i></a>
+            </li>
+          </div>
+        </ul>
+      </div>
+      <p class="text-center">
+        <i class="fa fa-copyright"></i>
+        Kendra Reynolds 2022
+      </p>
+    </footer>
+  </div>
 
 </body>
 
