--- a/work.html
+++ b/work.html
@@ -50,18 +50,20 @@
     </div>
   </div>
 </nav>
-<div id="weather-app"></div>
+<div id="weather-app">
 <h1 class="h1-supplement-page text-center sup-heading mt-5 mb-5">What I've Done</h1>
+</div>
 <div class="container">
-  <div class="row">
-    <div class="col-lg-6">
-      <img class="project-image-work img-fluid" src="/images/vanilla-js-weather-app.png" alt="weather-app">
+  <div class="row shadow rounded row-odd ">
+    <div class="col-lg-6 mb-2">
+      <img class="project-image-work img-fluid shadow" src="/images/vanilla-js-weather-app.png" alt="weather-app">
+        <h5 class="colored-text text-center mt-3">Technologies Used: <br /> VS Code, HTML, CSS, JavaScript, Axios,
+          Bootstrap, API,
+          GitHub</h5>
     </div>
-    <div class="col-lg-6">
-      <h2 class="work-project-headings text-center">Weather App</h2>
-      <h5 class="colored-text text-center mt-3">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, Axios,
-        Bootstrap, API,
-        GitHub</h5>
+    <div class="col-lg-6 mb-5">
+      <h2 class="work-project-headings text-center ">Weather App</h2>
+  
       <p class="m-2  project-paragraph p-2">One of my favorite projects I've worked on to date was this weather
         web app that uses the Open Weather API.
         Using JavaScript with Axios, whenever a city search is made, a request is made to
@@ -82,28 +84,27 @@
       </div>
     </div>
   </div>
-  <div class="row mt-5">
-    <div class="col-lg-6">
-      <img class="project-image-work img-fluid" src="/images/Typing-Speed-Test.png" alt="typing test app">
-    </div>
-    <div class="col-lg-6">
-      <h2 class="work-project-headings text-center">Typing Test App</h2>
-      <h5 class="colored-text text-center mt-3">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, Github
+  <div class="row row-even rounded shadow mt-5 ">
+    <div class="col-lg-6 mb-2">
+      <img class="project-image-work img-fluid shadow" src="/images/Typing-Speed-Test.png" alt="typing test app">
+      <h5 class="colored-text text-center mt-3 ">Technologies Used: <br /> VS Code, HTML, CSS, JavaScript, Github
       </h5>
-      <p class="m-2  project-paragraph p-2"> This typing speed and accuracy test web application uses vanilla
+    </div>
+    <div class="col-lg-6 mb-5">
+      <h2 class="work-project-headings text-center">Typing Test App</h2>
+    
+      <p class="m-2 project-paragraph p-2"> This typing speed and accuracy test web application uses vanilla
         JavaScript to interact with the user. The test allows for three different options with a countdown timer
-        that begins after the user clicks start. The app keeps track
-        of the
-        user's keystrokes using an event handler, allowing the user to see when they make a typing mistake in real
-        time.</p>
+        that begins after clicking start. The app keeps tracks user's keystrokes using an event handler,
+        and highlights typing errors in real time. </p>
       <div class="project-links mt-3 mb-5">
         <div class="site-link">
-          <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="blank" class="btn-branding mt-3">
+          <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="_blank" class="btn-branding-alt mt-3">
             Visit Site
           </a>
         </div>
         <div class="git-link">
-          <a href="https://github.com/kendracodesio/typing-test-app" target="blank" class="btn-branding mt-3">
+          <a href="https://github.com/kendracodesio/typing-test-app" target="_blank" class="btn-branding-alt mt-3">
             View Code
           </a>
             <div id="landing-page"></div>
@@ -111,34 +112,70 @@
       </div>
     </div>
   </div>
-  <div class="row mt-5">
-    <div class="col-lg-6">
-      <img class="project-image-work img-fluid" src="/images/coffeelicious-landing-page.png" alt="coffee-landing-page">
+  <div class="row row-odd mt-5 shadow rounded page-bottom">
+    <div class="col-lg-6 mb-2">
+      <img class="project-image-work img-fluid shadow" src="/images/coffeelicious-landing-page.png" alt="coffee-landing-page">
+    <h5 class="colored-text text-center mt-3">Technologies Used: <br /> VS Code, HTML, CSS, JavaScript, Github
+    </h5>
     </div>
-    <div class="col-lg-6">
+    <div class="col-lg-6 mb-5 ">
       <h2 class="work-project-headings text-center">Landing Page</h2>
-      <h5 class="colored-text text-center mt-3">Tools & Technologies: <br /> VS Code, HTML, CSS, JavaScript, Github
-      </h5>
+      
       <p class="m-2  project-paragraph p-2"> One of the first projects I created was this simple landing page for a
         fictitious coffee recipe e-book. I implemented an 'order now' button that utilizes JavaScript prompting the user
         for their
-        name and email address and ensures they are valid.</p>
-      <div class="project-links mt-3 mb-5">
+        name and email address and ensures they are valid. The product isn't real so
+        feel free to test it out using fake, incomplete, or missing information!</p>
+      <div class="project-links mt-3">
         <div class="site-link">
-          <a href="https://remarkable-marigold-83198c.netlify.app/" target="blank" class="btn-branding mt-3">
+          <a href="https://remarkable-marigold-83198c.netlify.app/" target="_blank" class="btn-branding mt-3">
             Visit Site
           </a>
         </div>
         <div class="git-link">
-          <a href="https://github.com/kendracodesio/coffeelicious-landing-page" target="blank"
+          <a href="https://github.com/kendracodesio/coffeelicious-landing-page" target="_blank"
             class="btn-branding mt-3">
             View Code
           </a>
         </div>
       </div>
     </div>
-  </div>
+  </div>  
 </div>
+
+
+
+
+<footer>
+  <div class=" text-center">
+    <ul class="social-links">
+      <div>
+        <li>
+          <a href="www.linkedin.com/in/kendrarreynolds"><i class="fa-brands fa-linkedin"></i></a>
+        </li>
+      </div>
+      <div>
+        <li>
+          <a href="https://twitter.com/kendracodesio"><i class="fa-brands fa-twitter"></i></a>
+        </li>
+      </div>
+      <div>
+        <li>
+          <a href="http://instagram.com/kendrreyy"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+      </div>
+      <div>
+        <li>
+          <a href="https://github.com/kendracodesio"><i class="fa-brands fa-github"></i></a>
+        </li>
+      </div>
+    </ul>
+  </div>
+  <p class="text-center">
+    <i class="fa fa-copyright"></i>
+    Kendra Reynolds 2022
+  </p>
+</footer>
 </body>
 
 </html>
