--- a/about.html
+++ b/about.html
@@ -22,61 +22,98 @@
 </head>
 
 <body class="body-pages">
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">KENDRA REYNOLDS</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/work.html">Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-  <div class="container">
-        <div class="row main-row-about mt-5">
-      <div class="col-md-7 text-left">
-  <h1 class="h1-supplement-page text-left mt-5 ps-3">A Little About Me</h1>
-        <h2 class="text-left mt-3 about-intro ps-3">Hi, my name is Kendra Reynolds...</h2>
-          <p class="text-left section-paragraphs ps-3 mb-4">I'm a web developer with a passion for front-end development
-            and design. As a third year student at <a href="https://www.wgu.edu" tartget="blank"
-            class="links-in-paragraph">Western Governor's University</a> pursuing a degree in
-            <a href="https://www.wgu.edu/online-it-degrees/software-development-bachelors-program.html" target="blank"
-            class="links-in-paragraph">software development</a>, I aspire to grow my career in a direction that
-            allows me to channel my creativity through creating software that is not only
-            aesthetically pleasing but also engaging.</p>
-            <div class="button-wrapper ps-3">
-              <a href="/work.html" target="blank" class="btn-branding">
-                See My Work
-              </a>
-              </div>
-     
-  </div>
-
-  <div class="col-md-5">
-    <img src="/images/kendra-emoji.png" alt="kendra-laptop-emoji" class="about-kendra-img img-fluid">
-
-  </div>
-
   
 
+<div class="container-fluid">
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <a class="navbar-brand" href="/index.html">KENDRA REYNOLDS</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/work.html">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="/about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+</div>
+</nav>
+
+<div class="container">
+  <div class="row main-row-about mt-5">
+    <div class="col-md-7 text-left">
+      <h1 class="h1-supplement-page text-left ps-3 mt-5">A Little About Me</h1>
+      <h2 class="text-left mt-3 about-intro ps-3">Hi, my name is Kendra Reynolds...</h2>
+      <p class="text-left section-paragraphs ps-3 mb-4">I'm a web developer with a passion for front-end development
+        and design. As a third year student at <a href="https://www.wgu.edu" tartget="blank"
+          class="links-in-paragraph">Western Governor's University</a> pursuing a degree in
+        <a href="https://www.wgu.edu/online-it-degrees/software-development-bachelors-program.html" target="blank"
+          class="links-in-paragraph">software development</a>, I aspire to grow my career in a direction that
+        allows me to channel my creativity through creating software that is not only
+        aesthetically pleasing but also engaging.
+      </p>
+      <div class="button-wrapper ps-3 page-bottom">
+        <a href="/work.html" target="blank" class="btn-branding">
+          See My Work
+        </a>
+      </div>
+
+    </div>
+
+    <div class="col-md-5 ">
+      <div class=" img-wrapper">
+      <img src="/images/kendra-emoji.png" alt="kendra-laptop-emoji" class="about-kendra-img img-fluid">
+</div>
+    </div>
+
+
+
   </div>
 
+</div>
+
+
+<footer>
+  <div class=" text-center">
+    <ul class="social-links">
+      <div>
+        <li>
+          <a href="www.linkedin.com/in/kendrarreynolds"><i class="fa-brands fa-linkedin"></i></a>
+        </li>
+      </div>
+      <div>
+        <li>
+          <a href="https://twitter.com/kendracodesio"><i class="fa-brands fa-twitter"></i></a>
+        </li>
+      </div>
+      <div>
+        <li>
+          <a href="http://instagram.com/kendrreyy"><i class="fa-brands fa-instagram"></i></a>
+        </li>
+      </div>
+      <div>
+        <li>
+          <a href="https://github.com/kendracodesio"><i class="fa-brands fa-github"></i></a>
+        </li>
+      </div>
+    </ul>
+  </div>
+  <p class="text-center">
+    <i class="fa fa-copyright"></i>
+    Kendra Reynolds 2022
+  </p>
+</footer>
 
 </body>
 
