made website SEO friendly

--- a/work.html
+++ b/work.html
@@ -5,18 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Work | Kendra Reynolds</title>
+  <meta description="Check out the amazing work from front-end developer, Kendra Reynolds. All the projects 
+  are open-sourced and available to view.">
+  <title>Kendra's Work | Kendra Reynolds</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
-
-
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
-
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/1179b3bac5.js" crossorigin="anonymous"></script>
 
@@ -27,7 +25,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/index.html">KENDRA REYNOLDS</a>
+    <a class="navbar-brand" href="/index.html" title="Homepage">KENDRA REYNOLDS</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -35,16 +33,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+          <a class="nav-link" aria-current="page" title="Homepage" href="/index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/work.html">Work</a>
+          <a class="nav-link active" href="/work.html" title="Kendra's Work">Work</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about.html">About</a>
+          <a class="nav-link" href="/about.html" title="About Kendra">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="/contact.html" title="Contact Kendra">Contact</a>
         </li>
       </ul>
     </div>
@@ -71,12 +69,12 @@
         into the site.</p>
       <div class="project-links mt-3 mb-5">
         <div class="site-link">
-          <a href="https://lucky-torte-cf570f.netlify.app" target="blank" class="btn-branding mt-3">
+          <a href="https://lucky-torte-cf570f.netlify.app" target="_blank" class="btn-branding mt-3" title="See the weather app site">
             Visit Site
           </a>
         </div>
         <div class="git-link">
-          <a href="https://github.com/kendracodesio/weather-app" target="blank" class="btn-branding mt-3">
+          <a href="https://github.com/kendracodesio/weather-app" target="_blank" class="btn-branding mt-3" title="See the weather app code">
             View Code
           </a>
           <div id="type-test-app"></div>
@@ -99,12 +97,12 @@
         and highlights typing errors in real time. </p>
       <div class="project-links mt-3 mb-5">
         <div class="site-link">
-          <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="_blank" class="btn-branding-alt mt-3">
+          <a href="https://lustrous-alpaca-56c0d5.netlify.app/" target="_blank" class="btn-branding-alt mt-3" title="See the typing test app">
             Visit Site
           </a>
         </div>
         <div class="git-link">
-          <a href="https://github.com/kendracodesio/typing-test-app" target="_blank" class="btn-branding-alt mt-3">
+          <a href="https://github.com/kendracodesio/typing-test-app" target="_blank" class="btn-branding-alt mt-3" title="See the typing test code">
             View Code
           </a>
             <div id="landing-page"></div>
@@ -128,13 +126,13 @@
         feel free to test it out using fake, incomplete, or missing information!</p>
       <div class="project-links mt-3">
         <div class="site-link">
-          <a href="https://remarkable-marigold-83198c.netlify.app/" target="_blank" class="btn-branding mt-3">
+          <a href="https://remarkable-marigold-83198c.netlify.app/" target="_blank" class="btn-branding mt-3" title="See the landing page">
             Visit Site
           </a>
         </div>
         <div class="git-link">
           <a href="https://github.com/kendracodesio/coffeelicious-landing-page" target="_blank"
-            class="btn-branding mt-3">
+            class="btn-branding mt-3" title="See the landing page code">
             View Code
           </a>
         </div>
@@ -142,39 +140,35 @@
     </div>
   </div>  
 </div>
-
-
-
-
 <footer>
   <div class=" text-center">
     <ul class="social-links">
-      <div>
-        <li>
-          <a href="www.linkedin.com/in/kendrarreynolds"><i class="fa-brands fa-linkedin"></i></a>
-        </li>
-      </div>
-      <div>
-        <li>
-          <a href="https://twitter.com/kendracodesio"><i class="fa-brands fa-twitter"></i></a>
-        </li>
-      </div>
-      <div>
-        <li>
-          <a href="http://instagram.com/kendrreyy"><i class="fa-brands fa-instagram"></i></a>
-        </li>
-      </div>
-      <div>
-        <li>
-          <a href="https://github.com/kendracodesio"><i class="fa-brands fa-github"></i></a>
-        </li>
-      </div>
-    </ul>
-  </div>
-  <p class="text-center">
-    <i class="fa fa-copyright"></i>
-    Kendra Reynolds 2022
-  </p>
+        <div>
+          <li>
+            <a href="www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
+          </li>
+        </div>
+        <div>
+          <li>
+            <a href="https://twitter.com/kendracodesio" target="_blank" title="Twitter Profile"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+        </div>
+        <div>
+          <li>
+            <a href="https://github.com/kendracodesio" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
+          </li>
+        </div>
+        <div>
+          <li>
+            <a href="mailto:kendracodesio@gmail.com" target="_blank" title="Email"><i class="fa-solid fa-envelope"></i></a>
+          </li>
+        </div>
+        </ul>
+        </div>
+<p class="text-center">
+  This website was coded by Kendra Reynolds and is <a class="links-in-paragraph" target="_blank" title="see the source code"
+    href="https://github.com/kendracodesio/my-portfolio">open-sourced</a>.
+</p>
 </footer>
 </body>
 
