--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me | Kendra Reynolds</title>
+  <meta description="Currently a front-end developer based in Los Angeles, Kendra Reynolds aspires to expand her 
+  her knowledge and skills with a degree in software development. Read more about her here.">
+  <title>About Kendra | Kendra Reynolds</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -22,98 +24,90 @@
 </head>
 
 <body class="body-pages">
-  
 
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand" href="/index.html">KENDRA REYNOLDS</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/work.html">Work</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="/about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
-        </li>
-      </ul>
-    </div>
-</div>
-</nav>
 
-<div class="container">
-  <div class="row main-row-about mt-5">
-    <div class="col-md-7 text-left">
-      <h1 class="h1-supplement-page text-left ps-3 mt-5">A Little About Me</h1>
-      <h2 class="text-left mt-3 about-intro ps-3">Hi, my name is Kendra Reynolds...</h2>
-      <p class="text-left section-paragraphs ps-3 mb-4">I'm a web developer with a passion for front-end development
-        and design. As a third year student at <a href="https://www.wgu.edu" tartget="blank"
-          class="links-in-paragraph">Western Governor's University</a> pursuing a degree in
-        <a href="https://www.wgu.edu/online-it-degrees/software-development-bachelors-program.html" target="blank"
-          class="links-in-paragraph">software development</a>, I aspire to grow my career in a direction that
-        allows me to channel my creativity through creating software that is not only
-        aesthetically pleasing but also engaging.
-      </p>
-      <div class="button-wrapper ps-3 page-bottom">
-        <a href="/work.html" target="blank" class="btn-branding">
-          See My Work
-        </a>
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <a class="navbar-brand" href="/index.html" title="Homepage">KENDRA REYNOLDS</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" title="Homepage" href="/index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/work.html" title="Kendra's Work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/about.html" title="About Kendra">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact.html" title="Contact Kendra">Contact</a>
+          </li>
+        </ul>
       </div>
-
-    </div>
-
-    <div class="col-md-5 ">
-      <div class=" img-wrapper">
-      <img src="/images/kendra-emoji.png" alt="kendra-laptop-emoji" class="about-kendra-img img-fluid">
-</div>
-    </div>
-
-
-
   </div>
+  </nav>
 
-</div>
-
-
-<footer>
-  <div class=" text-center">
-    <ul class="social-links">
-      <div>
-        <li>
-          <a href="www.linkedin.com/in/kendrarreynolds"><i class="fa-brands fa-linkedin"></i></a>
-        </li>
+  <div class="container">
+    <div class="row main-row-about mt-5">
+      <div class="col-md-7 text-left">
+        <h1 class="h1-supplement-page text-left ps-3 mt-5">A Little About Me</h1>
+        <h2 class="text-left mt-3 about-intro ps-3">Hi, my name is Kendra Reynolds...</h2>
+        <p class="text-left section-paragraphs ps-3 mb-4">I'm a web developer with a passion for front-end development
+          and design. As a third year student at <a href="https://www.wgu.edu" tartget="_blank" title="Go to WGU homepage"
+            class="links-in-paragraph">Western Governor's University</a> pursuing a degree in
+          <a href="https://www.wgu.edu/online-it-degrees/software-development-bachelors-program.html" target="_blank" title="Learn about WGU's software development program"
+            class="links-in-paragraph">software development</a>, I aspire to grow my career in a direction that
+          allows me to channel my creativity through creating software that is not only
+          aesthetically pleasing but also engaging.
+        </p>
+        <div class="button-wrapper ps-3 page-bottom">
+          <a href="/work.html" target="_blank" class="btn-branding" title="See Kendra's work"> 
+            See My Work
+          </a>
+        </div>
       </div>
-      <div>
-        <li>
-          <a href="https://twitter.com/kendracodesio"><i class="fa-brands fa-twitter"></i></a>
-        </li>
+      <div class="col-md-5 ">
+        <div class=" img-wrapper">
+          <img src="/images/kendra-emoji.png" alt="emoji with laptop waving hi" class="about-kendra-img img-fluid">
+        </div>
       </div>
-      <div>
-        <li>
-          <a href="http://instagram.com/kendrreyy"><i class="fa-brands fa-instagram"></i></a>
-        </li>
-      </div>
-      <div>
-        <li>
-          <a href="https://github.com/kendracodesio"><i class="fa-brands fa-github"></i></a>
-        </li>
-      </div>
-    </ul>
+    </div>
   </div>
-  <p class="text-center">
-    <i class="fa fa-copyright"></i>
-    Kendra Reynolds 2022
-  </p>
-</footer>
+  <footer>
+    <div class=" text-center">
+      <ul class="social-links">
+        <div>
+          <li>
+            <a href="www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
+          </li>
+        </div>
+        <div>
+          <li>
+            <a href="https://twitter.com/kendracodesio" target="_blank" title="Twitter Profile"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+        </div>
+        <div>
+          <li>
+            <a href="https://github.com/kendracodesio" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
+          </li>
+        </div>
+        <div>
+          <li>
+            <a href="mailto:kendracodesio@gmail.com" target="_blank" title="Email"><i class="fa-solid fa-envelope"></i></a>
+          </li>
+        </div>
+        </ul>
+        </div>
+    <p class="text-center">
+      This website was coded by Kendra Reynolds and is <a class="links-in-paragraph" target="_blank" title="see the source code"
+        href="https://github.com/kendracodesio/my-portfolio">open-sourced</a>.
+    </p>
+  </footer>
 
 </body>
 
