--- a/contact.html
+++ b/contact.html
@@ -5,28 +5,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Me | Kendra Reynolds</title>
+  <meta description="Want to hire Kendra Reynolds for you next website or web application project? 
+  Well, then you're going to need her email and contact details, found here.">
+  <title>Contact Kendra | Kendra Reynolds</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
-
-
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
-
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/1179b3bac5.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="/style/portfolio.css" type="text/css">
 </head>
-
 <body class="body-pages">
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html">KENDRA REYNOLDS</a>
+      <a class="navbar-brand" href="/index.html" title="Homepage">KENDRA REYNOLDS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,69 +31,90 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link" aria-current="page" href="/index.html" title="Homepage">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/work.html" title="Kendra's Work">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/about.html" title="About Kendra">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/contact.html">Contact</a>
+            <a class="nav-link active" href="/contact.html" title="Contact Kendra">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="sup-heading text-center mb-5">
-<i class="fa-regular fa-paper-plane h1-supplement-page mb-2"></i>
+  <div class="sup-heading text-center mb-2">
+    <i class="fa-regular fa-paper-plane h1-supplement-page mb-2"></i>
     <h1 class="h1-supplement-page">
       Get In Touch</h1>
-         
   </div>
-  <h3 class="text-center">Email</h3>
-  <p class="text-center mb-5">
-    <a href="mailto:kendracodesio@gmail.com" class="links-in-paragraph contact-link" target="_blank">kendracodesio@gmail.com</a>
-  </p>
-  <h3 class="text-center">Twitter</h3>
-  <p class="text-center mb-5">
-    <a href="https://twitter.com/kendracodesio" class="links-in-paragraph contact-link" target="_blank">@kendracodesio</a>
-  </p>
-  <h3 class="text-center ">Instagram</h3>
-  <p class="text-center page-bottom">
-    <a href="http://instagram.com/kendrreyy" class="links-in-paragraph contact-link" target="_blank">@kendrreyy</a>
-  </p>
-<footer>
-  <div class=" text-center">
-    <ul class="social-links">
-      <div>
-        <li>
-          <a href="www.linkedin.com/in/kendrarreynolds"><i class="fa-brands fa-linkedin"></i></a>
-        </li>
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-2">
       </div>
-      <div>
-        <li>
-          <a href="https://twitter.com/kendracodesio"><i class="fa-brands fa-twitter"></i></a>
-        </li>
+      <div class="col-md-8">
+        <p class="section-paragraphs contact-paragraph mt-3">
+          Got an idea for a project you'd like to run by me?</p>
+            <p class="section-paragraphs contact-paragraph">
+          Have a design you need put into code?
+          </p>
+          <p class="section-paragraphs contact-paragraph">
+          Need a website built or need help on your existing one?
+          </p>
+          <div class="pb-5">
+            <p class="section-paragraphs contact-paragraph">
+          Or perhaps you are a fellow developer that would like to collaborate on a project?
+          </p>
+          </div>
+
+        <p class="section-paragraphs contact-paragraph">
+          Whatever the reason, feel free to shoot me an email and I'll do my best to
+          help in any way I can!
+        </p>
+        <div class="button-wrapper p-4 page-bottom">
+          <a href="mailto:kendracodesio@gmail.com" target="_blank" class="btn-branding" title="Send Kendra An Email">
+            Email Me
+          </a>
+        </div>
       </div>
-      <div>
-        <li>
-          <a href="http://instagram.com/kendrreyy"><i class="fa-brands fa-instagram"></i></a>
-        </li>
+      <div class="col-md-2">
       </div>
-      <div>
-        <li>
-          <a href="https://github.com/kendracodesio"><i class="fa-brands fa-github"></i></a>
-        </li>
-      </div>
-    </ul>
-  </div>
-  <p class="text-center">
-    <i class="fa fa-copyright"></i>
-    Kendra Reynolds 2022
-  </p>
-</footer>
+    </div>
+</div>
+
+    <footer>
+      <div class=" text-center">
+        <ul class="social-links">
+            <div>
+              <li>
+                <a href="www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
+              </li>
+            </div>
+            <div>
+              <li>
+                <a href="https://twitter.com/kendracodesio" target="_blank" title="Twitter Profile"><i class="fa-brands fa-twitter"></i></a>
+              </li>
+            </div>
+            <div>
+              <li>
+                <a href="https://github.com/kendracodesio" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
+              </li>
+            </div>
+            <div>
+              <li>
+                <a href="mailto:kendracodesio@gmail.com" target="_blank" title="Email"><i class="fa-solid fa-envelope"></i></a>
+              </li>
+            </div>
+            </ul>
+            </div>
+    <p class="text-center">
+      This website was coded by Kendra Reynolds and is <a class="links-in-paragraph" target="_blank" title="see the source code"
+        href="https://github.com/kendracodesio/my-portfolio">open-sourced</a>.
+    </p>
+    </footer>
 
 
 
