--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta description="Kendra Reynolds is a front-end web developer based in Los Angeles, CA.
+  Kendra is available for hire to and can assist you in developing a brand new website, help fix
+  bugs with your exisiting one, or simply convert your graphic design into HTML/CSS code." >
+  Hire Los Angeles Based Front-End Web Developer Kendra Reynolds"
   <title>Front-End Web Developer | Kendra Reynolds</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
-
-
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
@@ -26,7 +27,7 @@
 <body>
   <nav class="navbar navbar-expand-lg fixed-top ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">KENDRA REYNOLDS</a>
+      <a class="navbar-brand" href="/" title="Homepage">KENDRA REYNOLDS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,16 +35,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/work.html" title="Kendra's Work">Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/about.html" title="About Kendra">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/contact.html" title="Contact Kendra">Contact</a>
           </li>
         </ul>
       </div>
@@ -54,7 +55,7 @@
     <h2 class="text-center mt-3">
       Front-end developer based in Los Angeles
     </h2>
-    <a href="#projects-homepage" class="down-icon"><i class="fa-solid fa-angles-down"></i></a>
+    <a href="#projects-homepage" class="down-icon" title="scrolls down to main content"><i class="fa-solid fa-angles-down"></i></a>
   </div>
   <div id="projects-homepage">
     <h3 class="featured text-center mt-5 mb-3">
@@ -67,9 +68,9 @@
             Weather App
           </h4>
           <img class="project-image d-flex rounded" src="/images/vanilla-js-weather-app.png"
-            alt="weather app vanilla js">
+            alt="weather app">
           <div class="button-wrapper p-3">
-            <a href="/work.html#weather-app" target="blank" class="btn-branding">
+            <a href="/work.html#weather-app" target="_blank" class="btn-branding" title="More About Weather App">
               Learn More
             </a>
           </div>
@@ -78,9 +79,9 @@
           <h4 class="mt-2 project-heading">
             Typing Test App
           </h4>
-          <img class="project-image d-flex rounded" src="/images/Typing-Speed-Test.png" alt="weather app vanilla js">
+          <img class="project-image d-flex rounded" src="/images/Typing-Speed-Test.png" alt="typing test app">
           <div class="button-wrapper p-3">
-            <a href="work.html#type-test-app" target="blank" class="btn-branding">
+            <a href="work.html#type-test-app" target="_blank" class="btn-branding" title="More About Typing Test App">
               Learn More
             </a>
           </div>
@@ -93,7 +94,7 @@
             alt="landing page for coffelicious recipe ebook">
 
           <div class="button-wrapper p-3 mb-5">
-            <a href="work.html#landing-page" target="blank" class="btn-branding">
+            <a href="work.html#landing-page" target="_blank" class="btn-branding" title="More About Landing Page Project">
               Learn More
             </a>
           </div>
@@ -106,29 +107,29 @@
         <ul class="social-links">
           <div>
             <li>
-              <a href="www.linkedin.com/in/kendrarreynolds"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="www.linkedin.com/in/kendrarreynolds" target="_blank" title="LinkedIn Profile"><i class="fa-brands fa-linkedin"></i></a>
             </li>
           </div>
           <div>
             <li>
-              <a href="https://twitter.com/kendracodesio"><i class="fa-brands fa-twitter"></i></a>
+              <a href="https://twitter.com/kendracodesio" target="_blank"  title="Twitter Profile"><i class="fa-brands fa-twitter"></i></a>
             </li>
           </div>
           <div>
             <li>
-              <a href="http://instagram.com/kendrreyy"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://github.com/kendracodesio" target="_blank"  title="Github Profile"><i class="fa-brands fa-github"></i></a>
             </li>
           </div>
           <div>
             <li>
-              <a href="https://github.com/kendracodesio"><i class="fa-brands fa-github"></i></a>
+              <a href="mailto:kendracodesio@gmail.com" target="_blank"  title="Email"><i class="fa-solid fa-envelope"></i></a>
             </li>
           </div>
         </ul>
       </div>
       <p class="text-center">
-        <i class="fa fa-copyright"></i>
-        Kendra Reynolds 2022
+        This website was coded by Kendra Reynolds and is <a class="links-in-paragraph" target="_blank" title="see the source code"
+         href="https://github.com/kendracodesio/my-portfolio">open-sourced</a>.
       </p>
     </footer>
   </div>
