updated the head of index.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta description="Kendra Reynolds is a front-end web developer based in Los Angeles, CA.
   Kendra is available for hire to and can assist you in developing a brand new website, help fix
   bugs with your exisiting one, or simply convert your graphic design into HTML/CSS code." >
-  Hire Los Angeles Based Front-End Web Developer Kendra Reynolds"
-  <title>Front-End Web Developer | Kendra Reynolds</title>
+  <title>Front-End Developer | Kendra Reynolds</title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
