--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
           aesthetically pleasing but also engaging.
         </p>
         <div class="button-wrapper ps-3 page-bottom">
-          <a href="/work.html" target="_blank" class="btn-branding" title="See Kendra's work"> 
+          <a href="/work.html" class="btn-branding" title="See Kendra's work"> 
             See My Work
           </a>
         </div>
