--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <img class="project-image d-flex rounded" src="/images/vanilla-js-weather-app.png"
             alt="weather app">
           <div class="button-wrapper p-3">
-            <a href="/work.html#weather-app" target="_blank" class="btn-branding" title="More About Weather App">
+            <a href="/work.html#weather-app" class="btn-branding" title="More About Weather App">
               Learn More
             </a>
           </div>
@@ -80,7 +80,7 @@
           </h4>
           <img class="project-image d-flex rounded" src="/images/Typing-Speed-Test.png" alt="typing test app">
           <div class="button-wrapper p-3">
-            <a href="work.html#type-test-app" target="_blank" class="btn-branding" title="More About Typing Test App">
+            <a href="work.html#type-test-app" class="btn-branding" title="More About Typing Test App">
               Learn More
             </a>
           </div>
@@ -93,7 +93,7 @@
             alt="landing page for coffelicious recipe ebook">
 
           <div class="button-wrapper p-3 mb-5">
-            <a href="work.html#landing-page" target="_blank" class="btn-branding" title="More About Landing Page Project">
+            <a href="work.html#landing-page" class="btn-branding" title="More About Landing Page Project">
               Learn More
             </a>
           </div>
